2009-06-23  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Integration/AspNetEditViewContent.cs: Fix build.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.Integration/AspNetEditViewContent.cs: Use the new
	  DesktopService instead of PlatformService.

2009-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.csproj: Flush.

2009-04-15  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AssemblyInfo.cs:
	* AspNetEdit.addin.xml: Bump MD version.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.sln: Flush.

2009-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.csproj: Flush.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.sln: Set policies. Remove unused name attribute.

2009-02-10  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Integration/MonoDevelopProxy.cs: Track API.

2009/02/06  Lluis Sanchez Gual  <lluis@novell.com>

 * AspNetEdit.sln:
 * AspNetEdit.mds:
 * AspNetEdit.csproj: Migrated to MSBuild file format.

2009/02/03  Lluis Sanchez Gual  <lluis@novell.com>

 * configure:
 * AssemblyInfo.cs:
 * AspNetEdit.addin.xml: Bump MD version.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.mdp: Flush project format changes.

2009-01-16  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Integration/AspNetEditDisplayBinding.cs: Track API.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* AspNetEdit.mdp: Don't require a specific version of Mono.Addins.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* AssemblyInfo.cs: Add AssemblyInfo.cs files that are autogenerated from
	the addin manifests.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* configure:
	* AspNetEdit.addin.xml: Bump MD version.

2008-10-23  Michael Hutchinson  <mhutchinson@novell.com>

	* AspNetEdit.Integration/MonoDevelopProxy.cs: Track API.

2008-09-26  Michael Hutchinson <mhutchinson@novell.com> 
