@@ -33,7 +33,7 @@ using System.ComponentModel.Design;
 using Gtk;
 using System.ComponentModel;
 using System.Collections;
-using MonoDevelop.DesignerSupport.PropertyGrid;
+using MonoDevelop.Components.PropertyGrid;
 
 namespace AspNetEdit.Editor.UI
 {
@@ -44,7 +44,7 @@ namespace AspNetEdit.Editor.UI
 		private IExtenderListService extenderListService = null;
 		private IComponentChangeService changeService = null;
 		private ITypeDescriptorFilterService typeDescriptorFilterService = null;
-		private MonoDevelop.DesignerSupport.PropertyGrid.PropertyGrid grid;
+		private MonoDevelop.Components.PropertyGrid.PropertyGrid grid;
 		private ListStore components;
 		private ComboBox combo;
 		
@@ -54,7 +54,7 @@ namespace AspNetEdit.Editor.UI
 		{
 			this.parentServices = parentServices;
 			
-			grid = new MonoDevelop.DesignerSupport.PropertyGrid.PropertyGrid ();
+			grid = new MonoDevelop.Components.PropertyGrid.PropertyGrid ();
 			this.PackEnd (grid, true, true, 0);
 
 
