@@ -1,3 +1,9 @@
+2009-07-28  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* AspNetEdit.Editor.UI/PropertyGrid.cs:
+	* AspNetEdit.Integration/AspNetEditViewContent.cs: Track
+	  PropertyGrid namespace move.
+
 2009-06-23  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* AspNetEdit.Integration/AspNetEditViewContent.cs: Fix build.
